# fb_inspector

./: .env.example  .gitignore  LICENSE  README.md  fb_inspector.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
core/: config.py  connection.py  formatter.py
services/: __init__.py  inspector.py
tests/: test_inspector.py
